--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
 						<!-- Work -->
 							<article id="work">
-								<h2 class="major">My Work</h2>
+								<h2 class="major">Work</h2>
 								<span class="image main"><img src="images/pic021.jpg" alt="" /></span>
 								<p><span class="comp_name">Microideology</span> create and provide high quality software products and tools, training and support, that are tailored to their customers needs. The website was created utilising custom HTML, PHP, JavaScript, jQuery, CSS and Bootstrap.<br/><a href="http://www.microideology.co.uk/" target="blank">View the website</a></p>
 								<span class="image main"><img src="images/pic022.gif" alt="" /></span>
